--- a/src/pages/thermodynamics/cycles.astro
+++ b/src/pages/thermodynamics/cycles.astro
@@ -13,11 +13,13 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Cycles">
-<Section title="">Power Cycles</Section>
+<Section title="Power Cycles">
 <p>Much of the power that we use in our daily lives is produced through cycles operating with a working fluid.</p>
+</Section>
 
-<SubSection title="">Carnot cycle</SubSection>
+<SubSection title="Carnot cycle">
 <p>A <strong>Carnot cycle</strong> is defined as an ideal gas, undergoing a 4-step, reversible, closed thermodynamic cycle. Imagine that an ideal gas contained within a piston-cylinder undergoes the series of processes depicted in Fig.~<OrangeText>fig:CarnotCycle</OrangeText> below, with the gas starting in state <InlineEquation equation="1" /> before progressing to states <InlineEquation equation="2" />, <InlineEquation equation="3" />, <InlineEquation equation="4" />, and then returning to state <InlineEquation equation="1" /> to complete a cycle. </p>
+
 
 
 
@@ -30,14 +32,15 @@ During the cycle, the system contacts sequentially a hot reservoir and a cold re
 <h4><strong>Quasi-static process:</strong></h4>
 <p>A process that occurs at an infinitesimally slow rate so that the system is in a thermodynamic equilibrium at all times.</p> 
 
-<SubSubSection title="">Carnot Cycle Steps</SubSubSection>
+</SubSection>
+
+<SubSubSection title="Carnot Cycle Steps">
 <p>
 In processes <InlineEquation equation="2 \\to 3" /> and <InlineEquation equation="3 \\to 4" />, work is done by the gas. Figure~<OrangeText>fig:PVwork1</OrangeText> illustrates two potential, monotonic processes corresponding to positive work, or work done by the gas. On the left, pressure is higher in state <InlineEquation equation="b" /> than state <InlineEquation equation="a" />. On the right, pressure is higher in state <InlineEquation equation="a" /> than state <InlineEquation equation="b" />. <InlineEquation equation="V_b > V_a" /> in both cases. When illustrating the magnitude of the work to be determined, the arrow is drawn out of the system as shown in state <InlineEquation equation="1" />. </p>
 
 
 
 <p>
-</p><p>
 In processes <InlineEquation equation="1 \\to 2" /> and <InlineEquation equation="4 \\to 1" />, work is done on the gas. Figure~<OrangeText>fig:PVwork1</OrangeText> illustrates two potential, monotonic processes corresponding to positive work, or work done by the gas. On the left, pressure is higher in state <InlineEquation equation="b" /> than state <InlineEquation equation="a" />. On the right, pressure is higher in state <InlineEquation equation="a" /> than state <InlineEquation equation="b" />. <InlineEquation equation="V_a > V_b" /> in both cases as shown in Figure~<OrangeText>fig:PVwork2</OrangeText>. Recall the expression for <InlineEquation equation="pV" /> work,</p>
 <DisplayEquation equation='W = \\int_{V_a}^{V_b} p(V) dV,' title="" />
 <p>noting that work for these processes is negative as indicated by the right-to-left process curve arrow in each of the <InlineEquation equation="pV" /> diagrams. When illustrating the magnitude of the work to be determined, the arrow is drawn into the system as shown in state <InlineEquation equation="a" /> (Fig.~<OrangeText>fig:PVwork2</OrangeText>). </p>
@@ -45,15 +48,21 @@ In processes <InlineEquation equation="1 \\to 2" /> and <InlineEquation equation
 
 <p>
 To plot the processes that make up the cycle in Fig.~<OrangeText>fig:CarnotCycle</OrangeText>, we first observe that processes <InlineEquation equation="2 \\to 3" /> and <InlineEquation equation="4 \\to 1" /> are <strong>isothermal</strong>, meaning the temperature of the working fluid is constant during the process. Given that the working fluid is an ideal gas, <InlineEquation equation="pV = mRT" /> and therefore </p>
-<DisplayEquation equation='p = \\frac{mR}{V} T' title="eq:IG_eos2" />
+
+<DisplayEquation equation='p = \\frac{mR}{V} T' id="IG_eos2" title="Pressure in an isothermic process" background="True"/>
+
 <p>where <InlineEquation equation="m" /> is the mass of gas and <InlineEquation equation="R" /> is the gas constant. An isothermal process at <InlineEquation equation="T_H" /> or <InlineEquation equation="T_C" />, the temperature of the hot and cold reservoirs, must therefore fall on the dashed lines in Fig.~<OrangeText>fig:CarnotpV</OrangeText>. These lines are known as <strong>isotherms</strong>. </p>
 
 
 <p>
 Processes <InlineEquation equation="1 \\to 2" /> and <InlineEquation equation="3 \\to 4" /> are <strong>adiabatic</strong>, meaning that during the process no heat transfer occurs. We will show later in the class that the adiabatic, reversible expansion or compression of an ideal gas must obey the relation</p>
-<DisplayEquation equation='pV^{\\gamma}=C' title="eq:polytropic" />
+
+<DisplayEquation equation='pV^{\\gamma}=C' id="polytropic" title="Ideal gas law in an adiabatic process" background="True"/>
+
 <p>where <InlineEquation equation="\\gamma" /> and <InlineEquation equation="C" /> are constants and <InlineEquation equation="\\gamma > 1" />. Therefore these processes must fall on a curve defined by</p>
-<DisplayEquation equation='p(V)=\\frac{C}{V^{\\gamma}},' title="eq:Pexpression" />
+
+<DisplayEquation equation='p(V)=\\frac{C}{V^{\\gamma}},' id="Pexpression" title="Ideal gas law in an adiabatic process" background="True"/>
+
 <p>illustrated for two values of <InlineEquation equation="C" /> by the dash-dot lines in Fig.~<OrangeText>fig:CarnotpV</OrangeText>. </p>
 <p>
 Combining the <InlineEquation equation="p(V)" /> relations for the ideal gas expansion and compression with the directionality of the work shown in Figs.~<OrangeText>fig:PVwork1</OrangeText> and <OrangeText>fig:PVwork2</OrangeText>, we can plot a Carnot cycle for an ideal gas on a <InlineEquation equation="pV" /> diagram as shown in Fig.~<OrangeText>fig:CarnotpVcycle</OrangeText>. </p>
@@ -61,18 +70,27 @@ Combining the <InlineEquation equation="p(V)" /> relations for the ideal gas exp
 
 <p>
 The work done by the cycle <InlineEquation equation="W" /> is positive and equal to the shaded area in Fig.~<OrangeText>fig:CarnotpVcycle</OrangeText>, where the net work is described as the sum of the work done during each of the processes,</p>
+
 <DisplayEquation equation='W= W_{12} + W_{23} + W_{34} + W_{41}' title="" />
-</p>
-<SubSubSection title="">Isothermal Processes</SubSubSection>
-<p>For isothermal processes <InlineEquation equation="2 \\to 3" /> and <InlineEquation equation="4 \\to 1" /> the work is determined by the <InlineEquation equation="p(V)" /> relation in Eqn<OrangeText>eq:IG_eos2</OrangeText>
+
+</SubSubSection>
+
+<SubSubSection title="Isothermal Processes">
+
+<p>For isothermal processes <InlineEquation equation="2 \\to 3" /> and <InlineEquation equation="4 \\to 1" /> the work is determined by the <InlineEquation equation="p(V)" /> relation in Eqn. <a href="#IG_eos2">IG_eos2</a>
 which yields</p>
+
 <DisplayEquation equation='W_{23} =mRT_H\\ln\\left(\\frac{V_3}{V_2}\\right) \\,\\,\\text{ and }\\,\\, W_{41} = mRT_C\\ln\\left(\\frac{V_1}{V_4}\\right)' title="" />
+
 <p>Because temperature is not changing and the fluid is an ideal gas, the change in internal energy for these processes is zero. An energy balance on the gas for each of these processes yields</p>
 <DisplayEquation equation='Q_{23} = Q_{H} = W_{23} = mRT_H\\ln\\left(\\frac{V_3}{V_2}\\right) ' title="eq:QH" />
 <p>where <InlineEquation equation="Q_H" /> refers to the heat transferred into the system from the hot reservoir and </p>
 <DisplayEquation equation='Q_{41} = - Q_{C} = W_{41} = mRT_C\\ln\\left(\\frac{V_1}{V_4}\\right)' title="eq:QC" />
 <p>where <InlineEquation equation="Q_C" /> refers to the heat transferred from the system to the cold reservoir. </p>
-<SubSubSection title="">Adiabatic Processes</SubSubSection>
+
+</SubSubSection>
+
+<SubSubSection title="Adiabatic Processes">
 <p>For adiabatic, reversible processes <InlineEquation equation="1 \\to 2" /> and <InlineEquation equation="3 \\to 4" /> the work is given by</p>
 <DisplayEquation equation='W_{12} = \\int_{V_1}^{V_2} \\frac{C_{12}}{V^{\\gamma}} dV \\text{ and } W_{34} = \\int_{V_3}^{V_4} \\frac{C_{34}}{V^{\\gamma}} dV' title="" />
 <p>which, when integrated yield</p>
@@ -97,20 +115,28 @@ illustrating that the work in these two processes are equal in magnitude but opp
 <p>Applying Eqn.<OrangeText>eq:V1234</OrangeText>, which defines the relationship between the states before and after the adiabatic processes, we obtain</p>
 <DisplayEquation equation='\\frac{Q_H}{Q_C} = \\frac{T_H}{T_C}' title="eq:HeatTemp" />
 <p>for an ideal gas undergoing a Carnot cycle. </p>
-<SubSubSection title="">Internal Energy Balance of the System</SubSubSection>
+
+</SubSubSection>
+
+<SubSubSection title="Internal Energy Balance of the System">
 <p>The total change in the internal energy of the Carnot cycle <InlineEquation equation="\\Delta U" /> can alternately be determined by an energy balance on the cycle</p>
 
 <DisplayEquation equation="\\begin{aligned}\\Delta U&= Q - W \\label{eq:Ebalance} \\\\<p>&= Q_H - Q_C - W_{12} - \\underbrace{W_{23}}_{=Q_H} - \\underbrace{W_{34}}_{=-W_{12}} - \\underbrace{W_{41}}_{=-Q_C} \\label{eq:Ebaldetailed} \\\\</p><p>&= 0</p>\\end{aligned}" />
 
 <p>Thus the Carnot cycle is consistent with the energy change for a cycle in general.</p>
-<SubSubSection title="">Thermal Efficiency</SubSubSection>
+
+</SubSubSection>
+
+<SubSubSection title="Thermal Efficiency">
 <p>This Carnot cycle turns heat input <InlineEquation equation="Q_H" /> into work output <InlineEquation equation="W" />. The thermal efficiency <InlineEquation equation="\\eta" /> for such a <strong>heat engine</strong> is given by </p>
 <DisplayEquation equation='\\eta = \\frac{\\text{net work output}}{\\text{heat input}} = \\frac{W}{Q_H}' title="" />
 <p>Combining <InlineEquation equation="\\Delta U = 0" /> for a cycle, the expression for the energy balance on the cycle (Eqns.<OrangeText>eq:Ebalance</OrangeText> and \eqref eq:Ebaldetailed ), and the temperature-heat transfer relationship found in Eqn.<OrangeText>eq:HeatTemp</OrangeText> yields</p>
 <DisplayEquation equation='\\eta = \\frac{Q_H - Q_C}{Q_H} = 1-\\frac{T_C}{T_H}.' title="" />
 <p>A Carnot cycle produces the maximum possible efficiency for any heat engine. The efficiency can only approach <InlineEquation equation="1" /> (equivalent to 100\%) when either <InlineEquation equation="T_C \\to 0" /> or <InlineEquation equation="T_H \\to \\infty" />, neither of which is physically attainable. </p>
 
-<SubSection title="">A Rankine Cycle</SubSection>
+</SubSubSection>
+
+<SubSection title="A Rankine Cycle">
 <p>The Rankine cycle is the basis for steam-electric power plants, which produce nearly 90\% of all electricity worldwide.  This cycle includes two isentropic processes, and utilizes isobaric heat transfers. </p>
 
 <p>
@@ -136,8 +162,9 @@ For reversible processes, the second law can be written as:</p>
 <DisplayEquation equation='\\eta = 1- Q_C/Q_H = 1-T_C/T_H' title="" /> 
 <p>it is clear from Fig.~<OrangeText>fig:TsDiagramRankine</OrangeText> that a hypothetical Carnot cycle with maximum operating temperature <InlineEquation equation="T_H" /> will always have a greater thermal efficiency than a Rankine cycle with the same maximum operating temperature since the <strong>average</strong> operating temperature of the Rankine cycle is lower. </p>
 
+</SubSection>
 
-<SubSection title="">Otto Cycle</SubSection>
+<SubSection title="Otto Cycle">
 <p>The Otto cycle provides an approximation of the internal combustion engines that still make up the largest share of the transportation industry. </p>
 <p>
 An automotive internal combustion engine uses a reciprocating piston-cylinder action to produce work.  In a four-stroke engine</p>
@@ -162,6 +189,6 @@ The Otto cycle simplifies this process by ignoring affects associated with the a
 <p>Note that because it is operating within a piston cylinder, the states the processes operate between are the state of the air in the closed piston cylinder system. This is different from the Rankine cycle, in which the stream states change by going through processes facilitated by different thermodynamics devices. We will show in class that the thermal efficiency of an Otto cycle can be expressed entirely as a function of the compression ratio, <InlineEquation equation="r" />, defined as the ratio of the largest gas volume over the smallest <InlineEquation equation="V_1/V_2" /> according to:</p>
 <DisplayEquation equation='\\eta = 1-\\frac{1}{r^{k-1}}' title="" />
 <p>and shows that engine efficiency can be increased by inducing a larger change in piston chamber volume. Of course, further practical considerations, such as the increased weight of such an engine, provide other design constraints. We only touch on a few of these design constraints, but in general thermodynamics provides many of the key principles through which energy systems can be optimized. </p>
-
+</SubSection>
 
 </Layout>
