--- a/src/pages/thermodynamics/entropy.astro
+++ b/src/pages/thermodynamics/entropy.astro
@@ -13,43 +13,51 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Entropy">
-<Section title="">Entropy</Section>
-<SubSection title="">The Second Law: Energy dispersal</SubSection>
+<Section title="Entropy"></Section>
+<SubSection title="The Second Law: Energy dispersal">
 <p>All energy spontaneously disperses if it is not prevented from doing so. This fact has been repeatedly deduced from observation and underlies the variety of ways of stating the second law of thermodynamics.</p>
+</SubSection>
 
-<SubSection title="">Clausius Statement of the Second Law</SubSection>
+<SubSection title="Clausius Statement of the Second Law">
 <p>Heat <strong>spontaneously</strong> flows from a hot object to a colder object, but not the other way around. It is impossible for any system to operate in such a way that the <u>sole result</u> would be an energy transfer by heat from a cooler to a hotter body.</p>
+</SubSection>
 
 
 
-
-<SubSubSection title="">Expansion</SubSubSection> A gas trapped in a rigid chamber will fill this container's volume.  If this chamber is to expand, the gas will <strong>spontaneously</strong> expand to fill the entire chamber
+<SubSubSection title="Expansion"> A gas trapped in a rigid chamber will fill this container's volume.  If this chamber is to expand, the gas will <strong>spontaneously</strong> expand to fill the entire chamber
 
 
 <p>
 A closed system energy balance on the chamber illustrates that the gas experiences no energy change, <strong>i.e.</strong>, because no heat transfer occurred and no work was done on or by the system.</p>
+
 <DisplayEquation equation='\\begin{aligned}\\Delta U = U_{\\text{after}} - U_{\\text{before}} &= Q - W \\\\U_{\\text{after}} - U_{\\text{before}} &= 0 \\end{aligned}' title="" />
-<p>Though the energy has not changed, the energy has spread out, or dispersed, within the chamber, meaning there are </p>
-<p>more ways for the energy to exist in the chamber, or that the gas has more <strong>microstates</strong> available to it. </p>
-<SubSubSection title="">Directionality</SubSubSection>
 
-<p>From observations of spontaneous processes, it is suggested that the second law restricts the directionality of processes. Spontaneous processes such as falling objects (Fig.~<OrangeText>fig:WeightLower</OrangeText>) and cooling frying pans are encountered every day. Spontaneous processes are <strong>irreversible</strong>, meaning that after they occur, the system and all parts of its surroundings cannot be exactly restored to their respective initial states. Auxiliary processes that can return the system to its initial state (<strong>i.e.</strong>, raise the object or heat the pan), also change the state of the surroundings. These experiences suggest a directionality to processes that is formalized by the second law of thermodynamics. </p>
+<p>Though the energy has not changed, the energy has spread out, or dispersed, within the chamber, meaning there aremore ways for the energy to exist in the chamber, or that the gas has more <strong>microstates</strong> available to it. </p>
 
+</SubSubSection>
 
+<SubSubSection title="Directionality">
 
-<SubSection title="">Kelvin-Planck Statement of the Second Law</SubSection>
+<p>From observations of spontaneous processes, it is suggested that the second law restricts the directionality of processes. Spontaneous processes such as falling objects (Fig. <OrangeText>fig:WeightLower</OrangeText>) and cooling frying pans are encountered every day. Spontaneous processes are <strong>irreversible</strong>, meaning that after they occur, the system and all parts of its surroundings cannot be exactly restored to their respective initial states. Auxiliary processes that can return the system to its initial state (<strong>i.e.</strong>, raise the object or heat the pan), also change the state of the surroundings. These experiences suggest a directionality to processes that is formalized by the second law of thermodynamics. </p>
+
+</SubSubSection>
+
+<SubSection title="Kelvin-Planck Statement of the Second Law">
 <h4><strong>Statement:</strong></h4>
 <p>It is impossible for any system to operate in a thermodynamic cycle and deliver a net amount of energy by work to its surroundings while receiving energy by heat transfer from a single thermal reservoir.</p> 
 
-
-
 <strong>Any hypothetical system that violates either the first or the second laws of thermodynamics cannot be.</strong>
+</SubSection>
 
-<SubSection title="">Clausius Inequality</SubSection>
+<SubSection title="Clausius Inequality">
 <p>The <strong>Clausius inequality</strong>, a collary of the second law, states that for <strong>any</strong> thermodynamic cycle</p>
-<DisplayEquation equation='\\oint \\left(\\frac{\\delta Q}{T}\\right)_b \\leq 0' title="eq:ClausiusIneq" />
-<p>where <InlineEquation equation="\\delta Q" /> is the heat transfer across some part of the system boundary for some portion of the cycle, and <InlineEquation equation="T" /> is the absolute temperature at that part of the system boundary, of which we are reminded by the subscript `b'.</p>
-<SubSubSection title="">Reversible Process</SubSubSection>
+
+<DisplayEquation equation='\\oint \\left(\\frac{\\delta Q}{T}\\right)_b \\leq 0' id="ClausiusIneq" title="Clausius inequality" background="True"/>
+
+<p>where <InlineEquation equation="\\delta Q" /> is the heat transfer across some part of the system boundary for some portion of the cycle, and <InlineEquation equation="T" /> is the absolute temperature at that part of the system boundary, of which we are reminded by the subscript `b`.</p>
+</SubSection>
+
+<SubSubSection title="Reversible Process">
 <Itemize>
 
     <Item>A cycle is reversible when the Clausius inequality becomes equality.</Item>
@@ -57,10 +65,13 @@ A closed system energy balance on the chamber illustrates that the gas experienc
     <Item>Such processes cannot occur in reality.   </Item>
 
 </Itemize>
-<SubSubSection title="">Internally Reversible Cycles</SubSubSection>
-<p>Internally reversible processes contain no irreversibilities within the system, but can interact with surroundings that include irreversibilities. Thus the validity of the equality holds, even in surroundings where irreversibilities occur. </p>
+</SubSubSection>
 
-<SubSection title="">What is Entropy?</SubSection>
+<SubSubSection title="Internally Reversible Cycles">
+<p>Internally reversible processes contain no irreversibilities within the system, but can interact with surroundings that include irreversibilities. Thus the validity of the equality holds, even in surroundings where irreversibilities occur. </p>
+</SubSubSection>
+
+<SubSection title="What is Entropy?">
 <p>For a reversible processes, the integral of <InlineEquation equation="\\delta Q/T" /> is <strong>path independent</strong>, and this thermodynamic property is called <strong>entropy</strong>.</p>
 <DisplayEquation equation='S_2 - S_1 = \\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{int rev}}.' title="" />
 <Itemize>
@@ -70,45 +81,60 @@ A closed system energy balance on the chamber illustrates that the gas experienc
     <Item>An entropy change for an <strong>incompressible substance</strong> depends only on temperature.</Item>
 
 </Itemize>
+</SubSection>
 
-<SubSubSection title="">Differential form of the closed system energy balance</SubSubSection>
+<SubSubSection title="Differential form of the closed system energy balance">
+
 <p>The differential form of the closed system energy balance for an internally reversible process on a simple, compressible system can be written as,</p>
-<DisplayEquation equation='du = T ds - pdv' title="eq:fund" />
-<SubSubSection title="">Specific Entropy of an Ideal Gas</SubSubSection>
+
+<DisplayEquation equation='du = T ds - pdv' id="fund" title="Differential form of energy-balance equation" background="True"/>
+
+</SubSubSection>
+
+<SubSubSection title="Specific Entropy of an Ideal Gas">
+
 <p>For an <strong>ideal gas</strong> with a given, <strong>constant specific heat  <InlineEquation equation="c_v" /></strong>, its change in specific entropy from a state <InlineEquation equation="1" /> to a state <InlineEquation equation="2" /> is given by the expression</p>
-<DisplayEquation equation='s_2 - s_1 = c_v\\ln\\frac{T_2}{T_1}+ R \\ln\\frac{v_2}{v_1}' title="" />
+
+<DisplayEquation equation='s_2 - s_1 = c_v\\ln\\frac{T_2}{T_1}+ R \\ln\\frac{v_2}{v_1}' title="Change in entropy for ideal gas with constant \\(c_v\\)" background="True"/>
+<p>
 where <InlineEquation equation="R" /> is the gas constant and <InlineEquation equation="v" /> is the specific volume. </p>
 
-
+<p>
  For an <strong>ideal gas</strong> with a given, <strong>constant specific heat  <InlineEquation equation="c_p" /></strong>, its change in specific entropy is given by the expression.
-<DisplayEquation equation='s_2 - s_1 = c_p\\ln\\frac{T_2}{T_1}- R \\ln\\frac{p_2}{p_1}.' title="" />
+</p>
+<DisplayEquation equation='s_2 - s_1 = c_p\\ln\\frac{T_2}{T_1}- R \\ln\\frac{p_2}{p_1}.' title="Change in entropy for ideal gas with constant \\(c_p\\)" background="True"/>
 
-<SubSubSection title="">Differential form of the enthalpy equation</SubSubSection>
-<p>This differential equation of enthalpy and Eqn.<OrangeText>eq:fund</OrangeText> are both known as <strong>fundamental equations</strong> of thermodynamics and relate thermodynamic properties between states. We use these expressions and the ideal gas as a model substance to gain some physical insight about entropy. </p>
-<DisplayEquation equation='dh = Tds + v dp.' title="" />
+</SubSubSection>
 
-<SubSection title="">Entropy Balance</SubSection>
+<SubSubSection title="Differential form of the enthalpy equation">
+<p>This differential equation of enthalpy and Eqn. <a href="#fund">fund</a> are both known as <strong>fundamental equations</strong> of thermodynamics and relate thermodynamic properties between states. We use these expressions and the ideal gas as a model substance to gain some physical insight about entropy. </p>
+<DisplayEquation equation='dh = Tds + v dp.' title="Differential form of enthalpy equation" background="True"/>
+
+</SubSubSection>
+
+<SubSection title="Entropy Balance">
 <p>The closed system entropy statement of the second law derives from the Clausius Inequality which in turn derives from the Kelvin-Planck statement. As we have shown, this statement is</p>
-<DisplayEquation equation='S_2 - S_1 = \\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} +\\sigma ' title="eq:Centropy1" />
+
+<DisplayEquation equation='S_2 - S_1 = \\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} +\\sigma ' id="Centropy1" derivation="True" background="True" title="\\(\\color{red} \\textrm{Title?}\\)">
+    <DisplayEquation equation="\\begin{aligned}\\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} + \\left(\\int_2^1 \\frac{\\delta Q}{T}\\right)_{\\text{b}} &\\leq 0 \\\\\\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} + S_1 - S_2 &= -\\sigma \\\\ \\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} +\\sigma &=  S_2 - S_1 \\end{aligned}" />
+</DisplayEquation>
+
 <p>where <InlineEquation equation="\\sigma" /> represents the <strong>entropy produced in the system</strong> due to the irreversibilities (Fig.~<OrangeText>fig:EntropyBal</OrangeText>) in the process and the `b' indicates that the heat is transferred across a boundary having temperature <InlineEquation equation="T_b" />. To satisfy the second law, <u><InlineEquation equation="\\sigma \\geq 0" /></u>. Entropy production <InlineEquation equation="\\sigma" /> only equals zero when a process is reversible. </p>
 
-<h4><strong>Expanded Derivation:</strong></h4>
- 
+</SubSection>
 
-<DisplayEquation equation='\\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} + \\left(\\int_2^1 \\frac{\\delta Q}{T}\\right)_{\\text{b}} &\\leq 0' title="" />
-<DisplayEquation equation='\\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} + S_1 - S_2 & = -\\sigma' title="" />
-<DisplayEquation equation='S_2 - S_1 &= \\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} +\\sigma' title="eq:EntropyBal" />
-<SubSubSection title="">Entropy Balance and multiple heat transfer events</SubSubSection>
-When boundary temperature is constant, and multiple, distinct heat transfers occur, Eqn.<OrangeText>eq:Centropy1</OrangeText> becomes</p>
-<DisplayEquation equation='S_2 - S_1 = \\sum_i \\frac{Q_i}{T_{\\text{b},i}} +\\sigma. ' title="eq:EntropyBalance" />
+<SubSubSection title="Entropy Balance and multiple heat transfer events">
+When boundary temperature is constant, and multiple, distinct heat transfers occur, Eqn. <a href="#Centropy1">Centropy1</a> becomes</p>
+<DisplayEquation equation='S_2 - S_1 = \\sum_i \\frac{Q_i}{T_{\\text{b},i}} +\\sigma. ' id="EntropyBalance" title="Entropy balance equation" background="True"/>
+</SubSubSection>
 
-<SubSubSection title="">Rate of Change of Entropy</SubSubSection>
+<SubSubSection title="Rate of Change of Entropy">
 <p>In the absence of mass flow, the rate of change of the entropy in a system is derived as </p>
-<DisplayEquation equation="\\begin{aligned}\\frac{d}{dt}\\left(S - S_0\\right) &= \\frac{d}{dt}\\left( \\sum_i \\frac{Q_i}{T_{\\text{b},i}} +\\sigma \\right) \\\\ \\frac{dS}{dt} &=\\sum_i \\frac{\\dot{Q}_i}{T_{\\text{b},i}} +\\dot{\\sigma}.\\end{aligned}`" />
+<DisplayEquation equation="\\begin{aligned}\\frac{d}{dt}\\left(S - S_0\\right) &= \\frac{d}{dt}\\left( \\sum_i \\frac{Q_i}{T_{\\text{b},i}} +\\sigma \\right) \\\\ \\frac{dS}{dt} &=\\sum_i \\frac{\\dot{Q}_i}{T_{\\text{b},i}} +\\dot{\\sigma}.\\end{aligned}`" title="Rate of change of entropy with no mass-flow" background="True"/>
 
+</SubSubSection>
 
-
-<SubSubSection title="">Microstates</SubSubSection>
+<SubSubSection title="Microstates">
 <p>The sets of possible configurations of the molecules are known as <strong>microstates</strong> and a state has a higher entropy when there are more microstates available to it.</p>
 
  When adding mass to a system (as shown via
@@ -121,18 +147,23 @@ When boundary temperature is constant, and multiple, distinct heat transfers occ
 
 </Itemize>
 
+</SubSubSection>
 
 
 
-<SubSubSection title="">Principal of Superposition</SubSubSection>
+<SubSubSection title="Principal of Superposition">
+
 <p>Entropy added to a system thus follows a <strong>principal of superposition</strong> meaning that the total system entropy, <InlineEquation equation="S" />, is the sum of the sub-system entropies.</p>
 <DisplayEquation equation='S = \\sum_i m_is_i,' title="" />
-<p>where each subsystem `<InlineEquation equation="i" />' of mass <InlineEquation equation="m_i" /> has specific entropy <InlineEquation equation="s_i" /> relative to some universal reference state.</p>
-<SubSubSection title="">Open System Entropy Rate Balance</SubSubSection>
+<p>where each subsystem `<InlineEquation equation="i" />` of mass <InlineEquation equation="m_i" /> has specific entropy <InlineEquation equation="s_i" /> relative to some universal reference state.</p>
+
+</SubSubSection>
+
+<SubSubSection title="Open System Entropy Rate Balance">
+
 <p>It follows that for an <strong>open system</strong> involving no mixing of substances, the entropy rate balance is simply</p>
-<DisplayEquation equation='\\frac{dS}{dt} =\\sum_i \\frac{\\dot{Q}_i}{T_{\\text{b},i}} + \\sum_{\\text{in}} \\dot{m}_{\\text{in}}s_{\\text{in}} - \\sum_{\\text{out}} \\dot{m}_{\\text{out}}s_{\\text{out}} + \\dot{\\sigma} .' title="eq:EntropyRateBalance" />
-<p>
-</p><p>
-</p>
+<DisplayEquation equation='\\frac{dS}{dt} =\\sum_i \\frac{\\dot{Q}_i}{T_{\\text{b},i}} + \\sum_{\\text{in}} \\dot{m}_{\\text{in}}s_{\\text{in}} - \\sum_{\\text{out}} \\dot{m}_{\\text{out}}s_{\\text{out}} + \\dot{\\sigma} .' id="EntropyRateBalance" title="Entropy rate of change balance" background="True"/>
+
+</SubSubSection>
 
 </Layout>
