pretty much all done except power cycles

--- a/src/pages/thermodynamics/entropy.astro
+++ b/src/pages/thermodynamics/entropy.astro
@@ -20,12 +20,19 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <SubSection title="Clausius Statement of the Second Law">
 <p>Heat <strong>spontaneously</strong> flows from a hot object to a colder object, but not the other way around. It is impossible for any system to operate in such a way that the <u>sole result</u> would be an energy transfer by heat from a cooler to a hotter body.</p>
+
+<Image src="/thermodynamics/entropy/fig1.png" width="5">
+    <strong>Figure 1:</strong> Schematic illustration of the Clausius Statement of the Second Law.
+</Image>
 </SubSection>
 
 
 
-<SubSubSection title="Expansion"> A gas trapped in a rigid chamber will fill this container's volume.  If this chamber is to expand, the gas will <strong>spontaneously</strong> expand to fill the entire chamber
+<SubSubSection title="Expansion"> A gas trapped in a rigid chamber will fill this container's volume.  If this chamber is to expand, the gas will <strong>spontaneously</strong> expand to fill the entire chamber.
 
+<Image src="/thermodynamics/entropy/fig2.png" width="7">
+    <strong>Figure 2:</strong> Spontaneous expansion of a gas.
+</Image>
 
 <p>
 A closed system energy balance on the chamber illustrates that the gas experiences no energy change, <strong>i.e.</strong>, because no heat transfer occurred and no work was done on or by the system.</p>
@@ -38,6 +45,11 @@ A closed system energy balance on the chamber illustrates that the gas experienc
 
 <SubSubSection title="Directionality">
 
+<Image src="/thermodynamics/entropy/fig3.png" width="6">
+    <strong>Figure 3:</strong> Spontaneous lowering of a weight on a pulley.
+</Image>
+
+    
 <p>From observations of spontaneous processes, it is suggested that the second law restricts the directionality of processes. Spontaneous processes such as falling objects (Fig. <OrangeText>fig:WeightLower</OrangeText>) and cooling frying pans are encountered every day. Spontaneous processes are <strong>irreversible</strong>, meaning that after they occur, the system and all parts of its surroundings cannot be exactly restored to their respective initial states. Auxiliary processes that can return the system to its initial state (<strong>i.e.</strong>, raise the object or heat the pan), also change the state of the surroundings. These experiences suggest a directionality to processes that is formalized by the second law of thermodynamics. </p>
 
 </SubSubSection>
@@ -121,6 +133,9 @@ where <InlineEquation equation="R" /> is the gas constant and <InlineEquation eq
 
 <p>where <InlineEquation equation="\\sigma" /> represents the <strong>entropy produced in the system</strong> due to the irreversibilities (Fig.~<OrangeText>fig:EntropyBal</OrangeText>) in the process and the `b' indicates that the heat is transferred across a boundary having temperature <InlineEquation equation="T_b" />. To satisfy the second law, <u><InlineEquation equation="\\sigma \\geq 0" /></u>. Entropy production <InlineEquation equation="\\sigma" /> only equals zero when a process is reversible. </p>
 
+<Image src="/thermodynamics/entropy/fig4.png" width="4" />
+
+
 </SubSection>
 
 <SubSubSection title="Entropy Balance and multiple heat transfer events">
@@ -146,6 +161,10 @@ When boundary temperature is constant, and multiple, distinct heat transfers occ
     <Item>The addition of identical substances requires no <strong>entropy of mixing</strong> and therefore entropy of the new system increases in direct proportion to its increase in mass.</Item>
 
 </Itemize>
+
+<Image src="/thermodynamics/entropy/fig5.png" width="5">
+    <strong>Figure 5:</strong> An illustration of the effect of distinguishable versus indistinguishable particles on microstates and therefore on system entropy.
+</Image>
 
 </SubSubSection>
 
