--- a/src/pages/thermodynamics/complex_problems.astro
+++ b/src/pages/thermodynamics/complex_problems.astro
@@ -70,6 +70,10 @@ Refrigeration/heat pump cycle consists of the following types of thermal devices
 
 </Itemize>
 
+<Image src="/thermodynamics/complex_problems/fig1.png" width="6">
+    <strong>Figure 1:</strong> A schematic of a refrigeration cycle or heat pump cycle. All <strong>known</strong> properties and energy flows are represented with variables. Refrigerant is the working fluid.
+</Image>
+
 <p>
     <u>Step 1:</u> The streams that have known states are streams 1 and 3. Known energy flow in the cycle is the power input into the compressor, <InlineEquation equation="\\dot{W}_c" />.
 </p>
@@ -121,6 +125,10 @@ The expression for the coefficient of performance <InlineEquation equation="\\ga
 <p>
 Imagine a two-tiered water fountain as depicted below. The maximum mass capacities of tier A and tier B are <InlineEquation equation="m_{A,max}" /> and <InlineEquation equation="m_{B,max}" />, respectively. Once the mass in the tier crosses its threshold, water will overflow the tier. The inlet mass flow rate is a constant given by <InlineEquation equation="\\dot{m}_{in}" />. However, the outlet flow rate is proportional to the amount of material in tier B, written as <InlineEquation equation="\\dot{m}_{out} = m_B(t)/\\mathcal{T}" />, where <InlineEquation equation="1/\\mathcal{T}" /> is a proportionality constant with units of inverse time and <InlineEquation equation="m_B(t)" /> is the mass of the fluid in tier B at time <InlineEquation equation="t" />. We can fully describe the fountain's operation at a variety of time points and conditions using the mass balance expressions.</p>
 
+<Image src="/thermodynamics/complex_problems/fig2.png" width="5">
+    <strong>Figure 2:</strong> A two-tiered water fountain.
+</Image>
+
 
 <h4><strong>Steady-State:</strong></h4>
 <p>Drawing a system boundary, <InlineEquation equation="\\mathcal{B}_1" />, around the entire fountain and considering when the fountain might be operating in steady-state (The diagonal arrow with the `ss' label indicates that this term is eliminated due to a `steady-state' assumption), Eqn.<OrangeText>eq:MassBalanceDiff</OrangeText>, simplifies to,</p>
@@ -130,6 +138,11 @@ Imagine a two-tiered water fountain as depicted below. The maximum mass capaciti
 from which it is clear that the fountain will operate at steady state whenever 
 </p>
 <DisplayEquation equation='m_{B} = \\dot{m}_{in}\\mathcal{T}. ' id="SS_mB" title="Steady state mass-balance" background="True"/>
+
+<Image src="/thermodynamics/complex_problems/fig3.png" width="5">
+    <strong>Figure 3:</strong> A block diagram depicting mass flow in the two tier water fountain.
+</Image>
+
 <h4><strong>Transient System:</strong></h4>
 <p><p>If it rains, an additional mass flow rate <InlineEquation equation="\\dot{m}_{rain}" /> into the fountain must also be considered. Eqn.<OrangeText>"eq:Mass"BalanceDiff</OrangeText> then becomes</p>
 <DisplayEquation equation='0 = \\dot{m}_{in} + \\dot{m}_{rain}-  m_B(t)/\\mathcal{T},' title="" />
@@ -151,7 +164,9 @@ Drawing our system boundary around the Tier B block above (<InlineEquation equat
 <DisplayEquation equation='m_B(t)= \\cancel{m_B(0)}e^{-t\\mathcal{T}} + \\mathcal{T}\\dot{m}_{A} (-e^{-t/\\mathcal{T}})=  \\mathcal{T}\\dot{m}_{in} (1-e^{-t\\mathcal{T}})' title="" />
 <p>As <InlineEquation equation="t\\rightarrow\\infty" />, the mass <InlineEquation equation="m_B(t)" /> asymptotically converges to <InlineEquation equation="\\dot{m}_A\\mathcal{T}" />, just as we found in our earlier steady state solution (Eq. <a href="#SS_mB">SS_mB</a>). These results are summarized in Figure~<OrangeText>fig:FountainPlot</OrangeText>. </p>
 
-
+<Image src="/thermodynamics/complex_problems/fig4.png" width="6">
+    <strong>Figure 4:</strong> A plot of the transient response of the water fountain in both tiers assuming that Tier B does not overflow.
+</Image>
 </SubSubSection>
 
 </Layout>
