save point before IDs

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -48,7 +48,7 @@ import Searchbar from "./Searchbar.astro";
     }
 
     a:hover{
-        color: var(--altgeld-orange);
+        color: var(--altgeld-orange) !important;
     }
 
     .campus .row {
