--- a/src/pages/thermodynamics/entropy.astro
+++ b/src/pages/thermodynamics/entropy.astro
@@ -45,12 +45,12 @@ A closed system energy balance on the chamber illustrates that the gas experienc
 
 <SubSubSection title="Directionality">
 
-<Image src="/thermodynamics/entropy/fig3.png" width="6">
+<Image src="/thermodynamics/entropy/fig3.png" width="6" id="WeightLower">
     <strong>Figure 3:</strong> Spontaneous lowering of a weight on a pulley.
 </Image>
 
     
-<p>From observations of spontaneous processes, it is suggested that the second law restricts the directionality of processes. Spontaneous processes such as falling objects (Fig. <OrangeText>fig:WeightLower</OrangeText>) and cooling frying pans are encountered every day. Spontaneous processes are <strong>irreversible</strong>, meaning that after they occur, the system and all parts of its surroundings cannot be exactly restored to their respective initial states. Auxiliary processes that can return the system to its initial state (<strong>i.e.</strong>, raise the object or heat the pan), also change the state of the surroundings. These experiences suggest a directionality to processes that is formalized by the second law of thermodynamics. </p>
+<p>From observations of spontaneous processes, it is suggested that the second law restricts the directionality of processes. Spontaneous processes such as falling objects (Fig. <a href="#WeightLower">WeightLower</a>) and cooling frying pans are encountered every day. Spontaneous processes are <strong>irreversible</strong>, meaning that after they occur, the system and all parts of its surroundings cannot be exactly restored to their respective initial states. Auxiliary processes that can return the system to its initial state (<strong>i.e.</strong>, raise the object or heat the pan), also change the state of the surroundings. These experiences suggest a directionality to processes that is formalized by the second law of thermodynamics. </p>
 
 </SubSubSection>
 
@@ -131,7 +131,7 @@ where <InlineEquation equation="R" /> is the gas constant and <InlineEquation eq
     <DisplayEquation equation="\\begin{aligned}\\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} + \\left(\\int_2^1 \\frac{\\delta Q}{T}\\right)_{\\text{b}} &\\leq 0 \\\\\\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} + S_1 - S_2 &= -\\sigma \\\\ \\left(\\int_1^2 \\frac{\\delta Q}{T}\\right)_{\\text{b}} +\\sigma &=  S_2 - S_1 \\end{aligned}" />
 </DisplayEquation>
 
-<p>where <InlineEquation equation="\\sigma" /> represents the <strong>entropy produced in the system</strong> due to the irreversibilities (Fig.~<OrangeText>fig:EntropyBal</OrangeText>) in the process and the `b' indicates that the heat is transferred across a boundary having temperature <InlineEquation equation="T_b" />. To satisfy the second law, <u><InlineEquation equation="\\sigma \\geq 0" /></u>. Entropy production <InlineEquation equation="\\sigma" /> only equals zero when a process is reversible. </p>
+<p>where <InlineEquation equation="\\sigma" /> represents the <strong>entropy produced in the system</strong> due to the irreversibilities (Fig. <a href="#EntropyBal">EntropyBal</a>) in the process and the `b' indicates that the heat is transferred across a boundary having temperature <InlineEquation equation="T_b" />. To satisfy the second law, <u><InlineEquation equation="\\sigma \\geq 0" /></u>. Entropy production <InlineEquation equation="\\sigma" /> only equals zero when a process is reversible. </p>
 
 <Image src="/thermodynamics/entropy/fig4.png" width="4" />
 
@@ -153,7 +153,7 @@ When boundary temperature is constant, and multiple, distinct heat transfers occ
 <p>The sets of possible configurations of the molecules are known as <strong>microstates</strong> and a state has a higher entropy when there are more microstates available to it.</p>
 
  When adding mass to a system (as shown via
-<p>a two-dimensional gas of two particles in a volume, which is then doubled as shown at the top of Fig.~<OrangeText>fig:Indistinguishable</OrangeText>), </p>
+<p>a two-dimensional gas of two particles in a volume, which is then doubled as shown at the top of Fig. <a href="#Indistinguishable">Indistinguishable</a>), </p>
 <Itemize>
 
     <Item>If the added particles are identical to the original particles (indistinguishable).  Therefore, the two `microstates' at the lower left are exactly the same even if the particles switch places, and this counts as only one microstate. </Item>
@@ -162,7 +162,7 @@ When boundary temperature is constant, and multiple, distinct heat transfers occ
 
 </Itemize>
 
-<Image src="/thermodynamics/entropy/fig5.png" width="5">
+<Image src="/thermodynamics/entropy/fig5.png" width="5" id="Indistinguishable">
     <strong>Figure 5:</strong> An illustration of the effect of distinguishable versus indistinguishable particles on microstates and therefore on system entropy.
 </Image>
 
